@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.ttrssreader"
     android:installLocation="auto"
-    android:versionName="0.9.5"
-    android:versionCode="951"
+    android:versionName="0.9.6"
+    android:versionCode="960"
 >
 
     <application
